--- a/Crc32C.Tests/Crc32C.Tests.csproj
+++ b/Crc32C.Tests/Crc32C.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crc32CAlgorithmTest.cs" />
+    <Compile Include="PerformanceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
