--- a/Crc32C.Tests/Crc32C.Tests.csproj
+++ b/Crc32C.Tests/Crc32C.Tests.csproj
@@ -42,9 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreSwitchHelper.cs" />
     <Compile Include="Crc32CAlgorithmTest.cs" />
     <Compile Include="PerformanceTest.cs" />
+    <Compile Include="PermissionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeImplementationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
